--- a/CProjet/CProjet.vcxproj.filters
+++ b/CProjet/CProjet.vcxproj.filters
@@ -30,6 +30,9 @@
     <ClCompile Include="Livre\livre.c">
       <Filter>Fichiers sources</Filter>
     </ClCompile>
+    <ClCompile Include="begin\beginning.c">
+      <Filter>Fichiers sources</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Bdd\laBdd.h">
@@ -42,6 +45,9 @@
       <Filter>Fichiers d%27en-tête</Filter>
     </ClInclude>
     <ClInclude Include="Livre\livre.h">
+      <Filter>Fichiers d%27en-tête</Filter>
+    </ClInclude>
+    <ClInclude Include="begin\beginning.h">
       <Filter>Fichiers d%27en-tête</Filter>
     </ClInclude>
   </ItemGroup>
